--- a/src/resource/css/author_bio.scss
+++ b/src/resource/css/author_bio.scss
@@ -1,5 +1,5 @@
-@import "https://fonts.googleapis.com/css?family=Open+Sans:300,400";
-@import "~devicons/css/devicons";
+//@import "~@fortawesome/fontawesome-free/css/all.min.css";
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css');
 
 %reset {
   margin: 0;
