--- a/assets/css/author_bio.css
+++ b/assets/css/author_bio.css
@@ -44,8 +44,9 @@
   bottom: 10px;
   -webkit-animation: animainfos 0.5s cubic-bezier(0.425, 1.04, 0.47, 1.105) 0.75s forwards;
           animation: animainfos 0.5s cubic-bezier(0.425, 1.04, 0.47, 1.105) 0.75s forwards;
+  gap: 10px;
 }
-.badgescard span {
+.badgescard i {
   font-size: 1.6em;
   margin: 0px 6px;
   opacity: 0.6;
